# PhoPyMNEHelper

./: .gitignore  README.md  pyproject.toml
notebooks/: IOGraphNotebook.ipynb
scripts/: agent_setup.sh
src/phopymnehelper/: EEG_data.py  EegProcessing.py  MNE_helpers.py  SavedSessionsProcessor.py  anatomy_and_electrodes.py  event_data.py  flutter_data.py  historical_data.py  iograph_data.py  motion_data.py  type_aliases.py  xdf_files.py
src/phopymnehelper/analysis/: COMPUTATIONS_README.md  __init__.py
src/phopymnehelper/analysis/computations/: EEG_data.py  EegProcessing.py  __init__.py  cache.py  eeg_registry.py  engine.py  gfp_band_power.py  protocol.py
src/phopymnehelper/analysis/computations/specific/: ADHD_sleep_intrusions.py  EEG_Spectograms.py  __init__.py  bad_epochs.py  base.py  fatigue_analysis.py  frontal_midline_theta.py  jaw_clench_probability.py  jaw_clench_state.py  mental_states.py
src/phopymnehelper/exporters/: AiirTable_Exporter.py  HDF5_Exporter.py  ZarrSerialization_Exporter.py
src/phopymnehelper/helpers/: dataframe_accessor_helpers.py  indexing_helpers.py
template/: dev.toml  production.toml
templating/: pyproject_template_dev.toml_fragment  pyproject_template_external.toml_fragment  pyproject_template_release.toml_fragment  pyproject_template_workspace.toml_fragment
tests/: test_ADHD_sleep_intrusions.py  test_EEG_Spectograms.py  test_bad_epochs.py  test_event_data_whisper_cleanup.py  test_fatigue_analysis.py  test_frontal_midline_theta.py  test_gfp_band_power.py  test_iograph_processor.py  test_jaw_clench_probability.py  test_jaw_clench_state.py  test_mental_states.py  test_theta_delta_unix_alignment.py
