[project]
name = "phopymnehelper"
version = "0.2.0"
description = "Wrappers for common MNE utilities, such as my personal electrode/head mesh configs"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyvistaqt>=0.11.3",
    "trame>=3.12.0",
    "meshio>=5.3.5",
    "gmsh>=4.15.0",
    "nptyping>=2.5.0",
    "numpy~=1.20",
    "pandas>=1.5.3,<3.0.0",
    "mne>=1.8.0",
    "xarray[complete]>=2024.3.0",
    "h5py>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
exporters = [
    "pyairtable>=3.3.0",
]
