[project]
name = "phopymnehelper"
version = "0.3.4"
description = "Wrappers for common MNE utilities, such as my personal electrode/head mesh configs"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyvistaqt>=0.11.3",
    "trame>=3.12.0",
    "meshio>=5.3.5",
    "gmsh>=4.15.0",
    "numpy~=1.20", # "numpy>=2.2.6",
    "pandas>=1.5.3,<3.0.0",
    "mne>=1.8.0",
    "xarray[complete]>=2024.3.0",
    "h5py>=3.14.0",
    "scikit-learn>=1.7.2",
    "pyprep>=0.6.0",
    "polars[all]>=1.39.3",
    "autoreject>=0.4.3",
    "pyxdf>=1.16.0", # "pyxdf>=1.17.2",
    "python-benedict>=0.28.3,<0.29",
    "phopylslhelper",
    "dill>=0.3.5.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.uv.sources]
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
exporters = [
    "pyairtable>=3.3.0",
]
